--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>me portfolio</title>
-    <link rel="icon" href="favicon (1)/apple-touch-icon.png">
-    <link rel="icon" href="favicon (1)/favicon-96x96.png">
-    <link rel="icon" href="favicon (1)/web-app-manifest-192x192.png">
-    <link rel="icon" href="favicon (1)/web-app-manifest-512x512.png">
+    <link rel="icon" href="logo/apple-touch-icon.png">
+    <link rel="icon" href="logo/favicon-96x96.png">
+    <link rel="icon" href="logo/web-app-manifest-192x192.png">
+    <link rel="icon" href="logo/web-app-manifest-512x512.png">
     <link rel="stylesheet" href="css/portfolio.css">
 </head>
 
 <body>
     <header>
         <nav>
-            <a class="projects" href="الصفحات/projects.html" title="to go projects">projects</a>
+            <a class="projects" href="pega/projects.html" title="to go projects">projects</a>
             <ul class="comm">
                 <li class="co"><a href="https://wsend.co/201016228620" target="_blank">whatsapp</a></li>
                 <li class="co"><a href="https://www.facebook.com/556356826j" target="_blank">facebook</a></li>
