--- a/pega/projects.html
+++ b/pega/projects.html
@@ -27,8 +27,8 @@
         <p>These are some of the key projects I’ve worked on.</p><br>
         <a href="html.html" title="to go  Page" target="_blank"> Page</a><br>
         <iframe src="html.html" width="1000" height="750" title="mohamoed ibrahim"></iframe><br>
-        <a href="../portfolio.html" title="to go  Page" target="_blank"> Page</a><br>
-        <iframe src="../portfolio.html" width="1000" height="750" title="mohamoed ibrahim"></iframe>
+        <a href="../index.html" title="to go  Page" target="_blank"> Page</a><br>
+        <iframe src="../index.html" width="1000" height="750" title="mohamoed ibrahim"></iframe>
     </main>
 </body>
 
