--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     
     <head>
+      <script src="https://kit.fontawesome.com/14a937e42c.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/about.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,12 +17,11 @@
 <body>
     <header>
         <nav>
-            <a class="projects" href="pega/projects.html" title="to go projects">projects</a>
+            <a class="projects fa-solid fa-laptop-code" href="pega/projects.html" title="to go projects"></a>
             <ul class="comm">
-                <li class="co"><a href="https://wsend.co/201016228620" target="_blank">whatsapp</a></li>
-                <li class="co"><a href="https://www.facebook.com/556356826j" target="_blank">facebook</a></li>
-                <li class="co"><a href="https://www.tiktok.com/@mohamed.hms?_t=ZS-8w870zHSblC&_r=1" target="_blank">tiktok</a></li>
-            </ul>
+                <li class="co wh"><a class="fa fa-whatsapp" href="https://wsend.co/201016228620" target="_blank"></a></li>
+                <li class="co fac"><a class="fa fa-facebook" href="https://www.facebook.com/556356826j" target="_blank"></a></li>
+                <li class="co ti"><a class="fa fa-brands fa-tiktok" href="https://www.tiktok.com/@mohamed.hms?_t=ZS-8w870zHSblC&_r=1" target="_blank"></a></li>
         </nav>
     </header>
     <main>
@@ -44,6 +44,7 @@
     <section>
         <img src="pega.png" alt="logo" width="100px">
     </section>
+    </ul>
 </body>
 
 </html>
