--- a/pega/projects.html
+++ b/pega/projects.html
@@ -5,20 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mohamed ibrahim</title>
-    <link rel="icon" href="favicon (1)/apple-touch-icon.png">
-    <link rel="icon" href="favicon (1)/favicon-96x96.png">
-    <link rel="icon" href="favicon (1)/web-app-manifest-192x192.png">
-    <link rel="icon" href="favicon (1)/web-app-manifest-512x512.png">
+    <link rel="icon" href="../logo/apple-touch-icon.png">
+    <link rel="icon" href="../logo/web-app-manifest-192x192.png">
+    <link rel="icon" href="../logo/web-app-manifest-512x512.png">
+    <link rel="icon" href="../logo/apple-touch-icon.png">
+    <link rel="stylesheet" href="../css/projects.css">
 </head>
 
 <body>
   <header>
     <nav>
         <ul>
-            <li> <a href="about.html" title="to go about me">about me</a></li>
-            <li> <a href="projects.html" title="to go projects">projects</a></li>
-            <li> <a href="communication.html" title="to go communication">communication</a></li>
-            <li> <a href="portfolio.html" title="to go home">home</a></li>
+            <li> <a href="../index.html" title="to go home">home</a></li>
         </ul>
     </nav>
   </header>
