--- a/pega/projects.html
+++ b/pega/projects.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+      <script src="https://kit.fontawesome.com/14a937e42c.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mohamed ibrahim</title>
@@ -16,17 +17,17 @@
   <header>
     <nav>
         <ul>
-            <li> <a href="../index.html" title="to go home">home</a></li>
+            <li> <a  class="h fa-solid fa-house" href="../index.html" title="to go home"></a></li>
         </ul>
     </nav>
   </header>
     <main>
-        <h1>Mohamed ibrahim</h1>
-        <p>These are some of the key projects I’ve worked on.</p><br>
-        <a href="html.html" title="to go  Page" target="_blank"> Page</a><br>
-        <iframe src="html.html" width="1000" height="750" title="mohamoed ibrahim"></iframe><br>
-        <a href="../index.html" title="to go  Page" target="_blank"> Page</a><br>
-        <iframe src="../index.html" width="1000" height="750" title="mohamoed ibrahim"></iframe>
+        <h1>Mohamed<span> ibrahim</span></h1>
+        <h3>These are some of the key projects I’ve worked on.</h3>
+        <a class="s" href="html.html" title="to go  Page" target="_blank"> in</a>
+        <a class="m" href="../index.html" title="to go  Page" target="_blank"> in</a><br>
+        <iframe class="ss" src="html.html" title="mohamoed ibrahim"></iframe>
+        <iframe class="mm" src="../index.html"  title="mohamoed ibrahim"></iframe>
     </main>
 </body>
 
