--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <li class="co wh"><a class="fa fa-whatsapp" href="https://wsend.co/201016228620" target="_blank"></a></li>
                 <li class="co fac"><a class="fa fa-facebook" href="https://www.facebook.com/556356826j" target="_blank"></a></li>
                 <li class="co ti"><a class="fa fa-brands fa-tiktok" href="https://www.tiktok.com/@mohamed.hms?_t=ZS-8w870zHSblC&_r=1" target="_blank"></a></li>
+                <li class="co gi"><a class="gi fa-brands fa-github" href="https://github.com/Muhammad1Homs" target="_blank"></a></li>
         </nav>
     </header>
     <main>
